# swallow-framework

./: .gitignore  LICENSE.md  README.md  project.toml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  branch-protection.yml
.github/workflows/: ci.yml  owner-pr-check.yml
examples/: counter.py  quiz.py  todo.py
src/swallow_framework/: __init__.py  exceptions.py
src/swallow_framework/core/: __init__.py  events.py  utils.py
src/swallow_framework/mvcc/: __init__.py  command.py  context.py  model.py  view.py
src/swallow_framework/state/: __init__.py  observable.py  property.py
tests/: __init__.py  conftest.py
tests/core/: test_events.py  test_utils.py
tests/mvcc/: test_command.py  test_context.py  test_model.py  test_view.py
tests/state/: test_observable.py  test_property.py
